[package]
name = "lysogeny-broth"
version = "1.1.4"
authors = ["tpltnt"]
edition = "2018"
description = "Substrate for cellular automata in Rust."
license = "MIT AND Apache-2.0"
repository = "https://github.com/tpltnt/lysogeny-broth"
documentation = "https://docs.rs/lysogeny-broth/"
keywords = ["cellular-automata", "nostd"]
readme = "README.md"
categories = ["embedded", "no-std", "simulation"]

[features]
# most people want binary cell states
default = ["dead-alive-only"]

# enable utility functions for binary cell state
dead-alive-only = []
# allow dead/alive cell to be converted into boolean
dead-alive-into-bool = ["dead-alive-only"]
# convert 8 cell states into an octet
dead-alive-u8-utils = ["dead-alive-only"]

[dependencies]
# only for JSON example
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"

